force-app/AqLib/apex/core/main/objects/LogDgt__c/LogDgt__c.object-meta.xml
<CustomObject>
    <description>Event logging object.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>