force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Unique programmatic identifier for the event, use for filtering, workflows, etc.</description>
    <inlineHelpText>Unique programmatic identifier for the event, use for filtering, workflows, etc.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>