force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>Detail such as stack trace, should be in JSON format whenever possible.</description>
    <inlineHelpText>Detail such as stack trace, should be in JSON format whenever possible.</inlineHelpText>
    <label>Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>