force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/LogDate__c.field-meta.xml
<CustomField>
    <fullName>LogDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date and time of the event.</description>
    <inlineHelpText>Date and time of the event.</inlineHelpText>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>