force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The main text message associated with the event.</description>
    <inlineHelpText>The main text message associated with the event.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>