force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enables hierarchical event logs, where one parent event log has multiple child logs.</description>
    <inlineHelpText>Enables hierarchical event logs, where one parent event log has multiple child logs.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>LogDgt__c</referenceTo>
    <relationshipLabel>Child Logs</relationshipLabel>
    <relationshipName>ChildLogs</relationshipName>
    <type>Lookup</type>
</CustomField>