force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecord__c</fullName>
    <description>Hyperlink to the related record.</description>
    <formula>HYPERLINK(&apos;/&apos; + RelatedRecordId__c, RelatedRecordName__c)</formula>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>