force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>Salesforce ID of the record related to the log.</description>
    <externalId>true</externalId>
    <inlineHelpText>Salesforce ID of the record related to the log.</inlineHelpText>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>