force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/RelatedRecordName__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordName__c</fullName>
    <description>Name of the record related to the log.</description>
    <label>Related Record Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>