force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/RelatedRecordType__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordType__c</fullName>
    <description>Object type of the related record.</description>
    <label>Related Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>