force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/ResultType__c.field-meta.xml
<CustomField>
    <fullName>ResultType__c</fullName>
    <description>When the event indicates successful result of an operation, this indicates the data type of the result.</description>
    <inlineHelpText>When the event indicates successful result of an operation, this indicates the data type of the result.</inlineHelpText>
    <label>Result Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>