force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Use to indicate the area that the event refers to, such as the related field or fields or the JSON path.</description>
    <inlineHelpText>Use to indicate the area that the event refers to, such as the related field or fields or the JSON path.</inlineHelpText>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>