force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/ScopeType__c.field-meta.xml
<CustomField>
    <fullName>ScopeType__c</fullName>
    <description>The type of object that the scope refers to.</description>
    <inlineHelpText>The type of object that the scope refers to.</inlineHelpText>
    <label>Scope Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>