force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Indicates whether the event represents an error, warning, or is informational.</description>
    <inlineHelpText>Indicates whether the event represents an error, warning, or is informational.</inlineHelpText>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>PartialError</fullName>
                <label>Partial Error</label>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>RolledBack</fullName>
                <label>Rolled Back</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>