force-app/AqLib/apex/core/main/objects/LogDgt__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates the class, function, page, or other component where the event originated.</description>
    <inlineHelpText>Indicates the class, function, page, or other component where the event originated.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>