force-app/AqLib/apex/core/main/objects/LogDgt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LogDate__c</columns>
    <columns>Level__c</columns>
    <columns>Severity__c</columns>
    <columns>Message__c</columns>
    <columns>RelatedRecord__c</columns>
    <columns>ResultType__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <columns>Scope__c</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>