force-app/AqLib/apex/core/main/objects/LogDgt__c/listViews/RecentErrors.listView-meta.xml
<ListView>
    <fullName>RecentErrors</fullName>
    <columns>NAME</columns>
    <columns>LogDate__c</columns>
    <columns>Level__c</columns>
    <columns>Severity__c</columns>
    <columns>Message__c</columns>
    <columns>ResultType__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <columns>Scope__c</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Severity__c</field>
        <operation>equals</operation>
        <value>PartialError,Error</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Recent Errors</label>
</ListView>